[package]
name = "ruccs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full", "time"] }
tokio-serial = "5"
serialport = "4"
tokio-tungstenite = "*"
tungstenite = "*"
futures = "0.3"
async-scoped = { version = "0.7", features = ["use-tokio"] }
async-trait = "0.1.57"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.2", features = ["v4"] }
strum = "0.24"
strum_macros = "0.24"
bitflags = "1.3"

cpp_core = { version = "0.6.0", optional = true }
qt_core = { version = "0.5.0", optional = true }
qt_gui = { version = "0.5.0", optional = true }
qt_widgets = { version = "0.5.0", optional = true }
qt_ui_tools = { version = "0.5.0", optional = true }

[build-dependencies]
qt_ritual_build = { version = "0.5.0", optional = true }

[features]
default = ["gui"]
gui = ["cpp_core", "qt_core", "qt_gui", "qt_widgets", "qt_ui_tools", "qt_ritual_build"]
