[package]
name = "ruccs"
version = "0.1.0"
edition = "2021"

[features]
gui = []
default = ["gui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full", "time"] }
tokio-serial = "5"
tokio-tungstenite = "*"
tungstenite = "*"
futures = "0.3"
async-scoped = { version = "0.7", features = ["use-tokio"] }
async-trait = "0.1.58"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.2", features = ["v4"] }
strum = "0.24"
strum_macros = "0.24"
bitflags = "1.3"
image = { version = "0.24" }
tao = {version = "*", features = ["tray"] }
serialport = "4.2"

